8170883: Add Class Path to Examples
Reviewed-by: kcr, vdrozdov